Finished lugares. Changed image hover

--- a/spv/static/scss/_backgrounds.scss
+++ b/spv/static/scss/_backgrounds.scss
@@ -14,7 +14,7 @@
 
 .bg-afiliate {
 	background-color: #ddd;
-	background: url('../img/sky.jpg') no-repeat center center;
+	background: url('../img/sky-orange.jpeg') no-repeat center center;
 	background-size: cover;
 	border: 0;
 }
