--- a/spv/static/scss/_colors.scss
+++ b/spv/static/scss/_colors.scss
@@ -19,4 +19,7 @@ $color-green-dark: #354D31;
 // Blue
 $color-blue: #92D3EA;
 $color-blue-light: #C9E0ED;
-$color-purple: #2d3b60;
+
+// Purple
+$color-purple: #2D3B60;
+$color-purple-dark: #1E2740;
