--- a/spv/static/scss/_home.scss
+++ b/spv/static/scss/_home.scss
@@ -2,7 +2,7 @@
 
 .afiliate {
 	height: 35vh;
-	margin-top: 5rem;
+	margin-top: 2rem;
 	
 	.intro {
 		position: relative;
@@ -10,11 +10,11 @@
 		transform: translateY(-50%);
 
 		a {
-			color: #222;
+			color: #eee;
 		}
 
 		a:hover {
-			color: #000;
+			color: #fff;
 		}
 	}
 }
