--- a/spv/static/scss/diego.scss
+++ b/spv/static/scss/diego.scss
@@ -3,7 +3,9 @@
 @import 'fonts';
 @import 'shadows';
 @import 'buttons';
+@import 'images';
 
 @import 'navbar';
 @import 'footer';
 @import 'home';
+@import 'lugares';
