--- a/spv/templates/home/content.html
+++ b/spv/templates/home/content.html
@@ -11,20 +11,20 @@
 
 <div class="row">
 	<div class="medium-8 columns">
-		<a href=""><p><img src="http://placehold.it/900x450" alt="main article image"></p></a>
+		<p><a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a></p>
 	</div>
 	<div class="medium-4 text-center columns hide-for-small-only">
-		<a href=""><p><img src="http://placehold.it/900x450&text=No%20pagaron" alt="article promo image" alt="advertisement for deep fried Twinkies"></p></a>
-		<a href=""><p><img src="http://placehold.it/900x450&text=No%20pagaron" alt="article promo image"></p></a>
+		<p><a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a></p>
+		<p><a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a></p>
 	</div>
 </div>
 
 <div class="row">
 	<div class="medium-6 columns">
-		<a href=""><p><img src="http://placehold.it/900x450&text=Destacado"></p></a>
+		<p><a href=""><img src="http://placehold.it/900x450&text=Destacado" data-equalizer-watch></a></p>
 	</div>
 	<div class="medium-6 columns">
-		<a href=""><p><img src="http://placehold.it/900x450&text=Destacado"></p></a>
+		<p><a href=""><img src="http://placehold.it/900x450&text=Destacado" data-equalizer-watch></a></p>
 	</div>
 </div>
 
@@ -36,16 +36,16 @@
 
 <div class="row small-up-2 medium-up-4">
 	<div class="column">
-		<p><img src="http://placehold.it/400x370&text=Hogar" alt="image for article"></p>
+		<p><a href=""><img src="http://placehold.it/400x370&text=Hogar" alt="image for article"></a></p>
 	</div>
 	<div class="column">
-		<p><img src="http://placehold.it/400x370&text=Automovil" alt="image for article"></p>
+		<p><a href=""><img src="http://placehold.it/400x370&text=Automovil" alt="image for article"></a></p>
 	</div>
 	<div class="column">
-		<p><img src="http://placehold.it/400x370&text=Ropa" alt="image for article"></p>
+		<p><a href=""><img src="http://placehold.it/400x370&text=Ropa" alt="image for article"></a></p>
 	</div>
 	<div class="column">
-		<p><img src="http://placehold.it/400x370&text=Comida" alt="image for article"></p>
+		<p><a href=""><img src="http://placehold.it/400x370&text=Comida" alt="image for article"></a></p>
 	</div>
 </div>
 
