--- a/spv/templates/_parts/base.html
+++ b/spv/templates/_parts/base.html
@@ -64,16 +64,7 @@
 	<!-- scripts concatenated and minified via django-compressor -->
 	{% compress js %}
 		<script>
-			$(document).foundation({
-  orbit: {
-    animation: 'slide',
-    timer_speed: 1000,
-    pause_on_hover: true,
-    animation_speed: 500,
-    navigation_arrows: true,
-    bullets: false
-  }
-});
+			$(document).foundation();
 		</script>
 		{% block js %}
 		{% endblock js %}
