--- a/spv/templates/_parts/footer.html
+++ b/spv/templates/_parts/footer.html
@@ -2,10 +2,10 @@
 <footer class="footer">
 	<div class="row fn-white">
 		<div class="small-12 medium-6 columns footer-main">
-			<h2><img src="{% static 'img/SoloBajio_icon.png' %}" class="logo">SoloBajio</h2>
+			<a href="{% url 'home' %}"><h2 class="fn-white"><img src="{% static 'img/SoloBajio_icon.png' %}" class="logo">SoloBajio</h2></a>
 			<p class="footer-links">
-				<a href="">Inicio</a>
-				<a href="">Lugares</a>
+				<a href="{% url 'home' %}">Inicio</a>
+				<a href="{% url 'lugares' %}">Lugares</a>
 				<a href="">Eventos</a>
 				<a href="">Conocenos</a>
 				<a href="">Contacto</a>
@@ -24,7 +24,7 @@
 				<h3>Contactanos</h3>
 				<input type="email" id="email" placeholder="Email" required></input>
 				<textarea rows="2" id="message" placeholder="Mensaje" required></textarea>
-				<button class="button large btn-primary" type="submit" value="Submit">Enviar</button>
+				<button class="button btn-primary" type="submit" value="Submit">Enviar</button>
 			</form>
 		</div>
 	</div>
