--- a/spv/templates/home/index.html
+++ b/spv/templates/home/index.html
@@ -1,15 +1,11 @@
 {% extends "_parts/base.html" %}
 
-{% block css %}
-	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>
-{% endblock css %}
-
 {% block header %}
 	{% include "_parts/menu.html" %}
 {% endblock header %}
 
 {% block content %}
-	{% include "main/content.html" %}
+	{% include "home/content.html" %}
 {% endblock content %}
 
 {% block footer %}
