--- a/spv/templates/_parts/menu.html
+++ b/spv/templates/_parts/menu.html
@@ -4,7 +4,7 @@
 		<ul class="menu">
 			<li><a href="{% url 'home' %}"><img src="{% static 'img/SoloBajio_icon.png' %}"><strong class="fn-white hide-for-small-only">SoloBajio</strong></a></li>
 			<li><a href="{% url 'lugares' %}">Lugares</a></li>
-			<li><a href="">Eventos</a></li>
+			<li><a href="{% url 'eventos' %}">Eventos</a></li>
 		</ul>
 	</div>
 	<div class="top-bar-right hide-for-small-only">
