--- a/spv/templates/_parts/footer.html
+++ b/spv/templates/_parts/footer.html
@@ -6,7 +6,7 @@
 			<p class="footer-links">
 				<a href="{% url 'home' %}">Inicio</a>
 				<a href="{% url 'lugares' %}">Lugares</a>
-				<a href="">Eventos</a>
+				<a href="{% url 'eventos' %}">Eventos</a>
 				<a href="">Conocenos</a>
 				<a href="">Contacto</a>
 			</p>
