--- a/spv/templates/home/content.html
+++ b/spv/templates/home/content.html
@@ -11,20 +11,26 @@
 
 <div class="row">
 	<div class="medium-8 columns">
-		<p><a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a></p>
+		<p><a href=""><img src="http://placehold.it/800x600" class="best"></a></p>
 	</div>
-	<div class="medium-4 text-center columns hide-for-small-only">
-		<p><a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a></p>
-		<p><a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a></p>
+	<div class="medium-4 text-center columns">
+		<p><a href=""><img src="http://placehold.it/640x480&text=Top"></a></p>
+		<p><a href=""><img src="http://placehold.it/640x480"></a></p>
 	</div>
 </div>
 
-<div class="row">
-	<div class="medium-6 columns">
-		<p><a href=""><img src="http://placehold.it/900x450&text=Destacado" data-equalizer-watch></a></p>
+<div class="row small-up-2 medium-up-4">
+	<div class="columns">
+		<p><a href=""><img src="http://placehold.it/640x480&text=Destacado"></a></p>
 	</div>
-	<div class="medium-6 columns">
-		<p><a href=""><img src="http://placehold.it/900x450&text=Destacado" data-equalizer-watch></a></p>
+	<div class="columns">
+		<p><a href=""><img src="http://placehold.it/640x480"></a></p>
+	</div>
+	<div class="columns">
+		<p><a href=""><img src="http://placehold.it/640x480"></a></p>
+	</div>
+	<div class="columns">
+		<p><a href=""><img src="http://placehold.it/640x480"></a></p>
 	</div>
 </div>
 
