--- a/spv/static/scss/_buttons.scss
+++ b/spv/static/scss/_buttons.scss
@@ -45,3 +45,45 @@
 		color: $color-purple-dark;
 	}
 }
+
+.chip {
+	display: inline-block;
+	height: 32px;
+	font-size: 13px;
+	font-weight: 500;
+	line-height: 32px;
+	padding: 0 12px;
+	border-radius: 16px;
+	margin: 0 10px;
+	color: #000;
+	background-color: #ccc;
+}
+
+.chip-primary {
+	@extend .chip;
+	background-color: $color-yellow;
+
+	&:hover {
+		background-color: $color-yellow-dark;
+	}
+}
+
+.chip-secondary {
+	@extend .chip;
+	color: #fff;
+	background-color: $color-purple;
+
+	&:hover {
+		background-color: $color-purple-dark;
+	}
+}
+
+.chip-accent {
+	@extend .chip;
+	color: #000;
+	background-color: $color-blue-light;
+
+	&:hover {
+		background-color: $color-blue;
+	}
+}
