--- a/spv/templates/lugares/content.html
+++ b/spv/templates/lugares/content.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <div class="top-bar shadow-6dp" id="lugares-filtros">
 	<div class="top-bar-left">
-		<ul class="dropdown menu colored text-center" data-dropdown-menu>
+		<ul class="dropdown menu colored" data-dropdown-menu>
 			<li>
 				<a href="" class="elegir-title">Ordenar</a>
 				<ul class="menu vertical">
@@ -31,7 +31,7 @@
 {% for negocio in negocios %}
 	<div class="column">
 			<figure class="lugar">
-				<a href="info/{{negocio.pk}}"><img src="{{ MEDIA_URL }}{{ negocio.images.all.0.image }}" alt="{{ negocio.images.0 }}" data-equalizer-watch></a>
+				<a href="{% url 'info' pk=negocio.pk %}"><img src="{{ MEDIA_URL }}{{ negocio.images.all.0.image }}" alt="{{ negocio.images.all.0.image }}" data-equalizer-watch></a>
 				<figcaption>
 					<p><img src="{{ MEDIA_URL }}{{ negocio.industry.icon }}">{{ negocio.name }}</p>
 				</figcaption>			
@@ -40,7 +40,7 @@
 {% endfor %}
 	<div class="column">
 			<figure class="lugar">
-				<a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a>
+				<a href=""><img src="http://placehold.it/640x480" data-equalizer-watch></a>
 				<figcaption>
 					<p><img src="{% static 'img/SoloBajio_icon.png' %}">Nombre muy largo del negocio</p>
 				</figcaption>			
@@ -48,7 +48,7 @@
 	</div>
 	<div class="column">
 			<figure class="lugar">
-				<a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a>
+				<a href=""><img src="http://placehold.it/640x480" data-equalizer-watch></a>
 				<figcaption>
 					<p><img src="{% static 'img/SoloBajio_icon.png' %}">Nombre del negocio</p>
 				</figcaption>			
@@ -56,7 +56,7 @@
 	</div>
 	<div class="column">
 			<figure class="lugar">
-				<a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a>
+				<a href=""><img src="http://placehold.it/640x480" data-equalizer-watch></a>
 				<figcaption>
 					<p><img src="{% static 'img/SoloBajio_icon.png' %}">Nombre muy largo del negocio</p>
 				</figcaption>			
@@ -64,7 +64,7 @@
 	</div>
 	<div class="column">
 			<figure class="lugar">
-				<a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a>
+				<a href=""><img src="http://placehold.it/640x480" data-equalizer-watch></a>
 				<figcaption>
 					<p><img src="{% static 'img/SoloBajio_icon.png' %}">Nombre muy largo del negocio</p>
 				</figcaption>			
@@ -72,7 +72,7 @@
 	</div>
 	<div class="column">
 			<figure class="lugar">
-				<a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a>
+				<a href=""><img src="http://placehold.it/640x480" data-equalizer-watch></a>
 				<figcaption>
 					<p><img src="{% static 'img/SoloBajio_icon.png' %}">Nombre muy largo del negocio</p>
 				</figcaption>			
@@ -80,7 +80,7 @@
 	</div>
 	<div class="column">
 			<figure class="lugar">
-				<a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a>
+				<a href=""><img src="http://placehold.it/640x480" data-equalizer-watch></a>
 				<figcaption>
 					<p><img src="{% static 'img/SoloBajio_icon.png' %}">Nombre muy largo del negocio</p>
 				</figcaption>			
@@ -88,7 +88,7 @@
 	</div>
 	<div class="column">
 			<figure class="lugar">
-				<a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a>
+				<a href=""><img src="http://placehold.it/640x480" data-equalizer-watch></a>
 				<figcaption>
 					<p><img src="{% static 'img/SoloBajio_icon.png' %}">Nombre muy largo del negocio</p>
 				</figcaption>			
@@ -96,7 +96,7 @@
 	</div>
 	<div class="column">
 			<figure class="lugar">
-				<a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a>
+				<a href=""><img src="http://placehold.it/640x480" data-equalizer-watch></a>
 				<figcaption>
 					<p><img src="{% static 'img/SoloBajio_icon.png' %}">Nombre muy largo del negocio</p>
 				</figcaption>			
@@ -104,7 +104,7 @@
 	</div>
 	<div class="column">
 			<figure class="lugar">
-				<a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a>
+				<a href=""><img src="http://placehold.it/640x480" data-equalizer-watch></a>
 				<figcaption>
 					<p><img src="{% static 'img/SoloBajio_icon.png' %}">Nombre muy largo del negocio</p>
 				</figcaption>			
@@ -112,7 +112,7 @@
 	</div>
 	<div class="column">
 			<figure class="lugar">
-				<a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a>
+				<a href=""><img src="http://placehold.it/640x480" data-equalizer-watch></a>
 				<figcaption>
 					<p><img src="{% static 'img/SoloBajio_icon.png' %}">Nombre muy largo del negocio</p>
 				</figcaption>			
@@ -120,7 +120,7 @@
 	</div>
 	<div class="column">
 			<figure class="lugar">
-				<a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a>
+				<a href=""><img src="http://placehold.it/640x480" data-equalizer-watch></a>
 				<figcaption>
 					<p><img src="{% static 'img/SoloBajio_icon.png' %}">Nombre muy largo del negocio</p>
 				</figcaption>			
@@ -128,7 +128,7 @@
 	</div>
 	<div class="column">
 			<figure class="lugar">
-				<a href=""><img src="http://placehold.it/900x450" data-equalizer-watch></a>
+				<a href=""><img src="http://placehold.it/640x480" data-equalizer-watch></a>
 				<figcaption>
 					<p><img src="{% static 'img/SoloBajio_icon.png' %}">Nombre muy largo del negocio</p>
 				</figcaption>			
