Added personalized Google Map, edited models to suit those needs. Almost done with info.html, get a better image.

--- a/spv/static/scss/_backgrounds.scss
+++ b/spv/static/scss/_backgrounds.scss
@@ -19,8 +19,15 @@
 	border: 0;
 }
 
+.bg-sky {
+	background-color: #ddd;
+	background: url('../img/sky.jpg') no-repeat center center;
+	background-size: cover;
+	border: 0;
+}
+
 .bg-gray {
-	background-color: #E5E5E5;
+	background-color: $color-gray;
 }
 
 .bg-skin {
