--- a/spv/static/scss/_general.scss
+++ b/spv/static/scss/_general.scss
@@ -17,6 +17,18 @@ a:hover > img {
 	filter: brightness(.8);
 }
 
+.flex-middle {
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	-webkit-box-align: center;
+
+	align-items: center;
+}
+
 ////////// Phone //////////
 
 @media (max-width: $grid-tablet-breakpoint - 1) {
