--- a/spv/templates/info/index.html
+++ b/spv/templates/info/index.html
@@ -1,4 +1,5 @@
 {% extends "_parts/base.html" %}
+{% load staticfiles %}
 
 {% block page_title %}
 	| {{ negocio.name }}
@@ -59,5 +60,6 @@
 	  });
 	}
     </script>
-	 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGkrbbQy477Od5YQkSa9hSQ1O6dDqKtZ8&signed_in=true&callback=initMap" async defer></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGkrbbQy477Od5YQkSa9hSQ1O6dDqKtZ8&signed_in=true&callback=initMap" async defer></script>
+	<script type="text/javascript" src="{% static 'js/modal.js' %}"></script>
 {% endblock js %}
