Collected static and finished Info

--- a/spv/templates/home/content.html
+++ b/spv/templates/home/content.html
@@ -14,8 +14,8 @@
 		<p><a href=""><img src="http://placehold.it/800x600" class="best"></a></p>
 	</div>
 	<div class="medium-4 text-center columns">
-		<p><a href=""><img src="http://placehold.it/640x480&text=Top"></a></p>
-		<p><a href=""><img src="http://placehold.it/640x480"></a></p>
+		<p><a href="{% url 'lugares' %}"><img src="http://placehold.it/640x480&text=Lugares"></a></p>
+		<p><a href="{% url 'eventos' %}"><img src="http://placehold.it/640x480&text=Eventos"></a></p>
 	</div>
 </div>
 
