--- a/static/scss/_info.scss
+++ b/static/scss/_info.scss
@@ -28,8 +28,9 @@
 	}
 
 	.gallery {
-		margin: 50px auto 0 auto;
+		margin: 20px auto;
 		width: 95%;
+		max-width: 640px;
 
 		.img {
 			width: 100%;
