Ready lugares search and filter

--- a/spv/templates/_parts/footer.html
+++ b/spv/templates/_parts/footer.html
@@ -13,10 +13,10 @@
 			<ul class="inline-list social">
 				<a href=""><i class="fi-social-facebook"></i></a>
 				<a href=""><i class="fi-social-twitter"></i></a>
-				<a href=""><i class="fi-social-linkedin"></i></a>
-				<a href=""><i class="fi-social-github"></i></a>
+				<a href=""><i class="fi-web"></i></a>
+				<a href="https://github.com/Anayamd"><i class="fi-social-github"></i></a>
 			</ul>
-			<p class="copywrite">&copy; Soluciones Dual 2016</p>
+			<p class="copywrite"><a href="http://solucionesdual.com">&copy; Soluciones Dual 2016</a></p>
 		</div>
 
 		<div class="small-12 medium-6 columns">
